MAJ pages restaurants

--- a/Restaurants/restaurant2.html
+++ b/Restaurants/restaurant2.html
@@ -32,140 +32,139 @@
                     <h2 class="subtitle_lacarte">ENTRÉES</h2>
                     <a href="#">
                     <li class="menu">
-                        <div class="menuetprix">
-                            <div class="menu-txt"> 
+                        <article class="plats">
+                            <div class="menu-txt">
                                 <h3 class="titre_menus">Tartare de thon</h3>
-                                <p class="subtitle_menus">Assaisonné au yuzu</p>
+                                <span class="accompagnement">Assaisonné au yuzu</span>
                             </div>
-                            <div class="prix">
-                                <p class="prix-txt">25€</p>                           
+                            <div class="validation"> 
+                                <p class="prix-txt">25€</p>                                
+                                <div class="check">
+                                    <i class="fa-solid fa-check-circle"></i>                               
+                                </div>
                             </div>
-                            <div class="check">                                                       
-                                <i class="fa-solid fa-check-circle"></i>                                    
-                            </div>
-                        </div>
-                    </li>                          
+                        </article>
+                    </li>             
                     <li class="menu">
-                        <div class="menuetprix">
+                        <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Bouchée de homard croustillant</h3>
-                                <p class="subtitle_menus">Et sa farandole de petits légumes</p>
+                                <span class="accompagnement">Et sa farandole de petits légumes</span>
                             </div>
-                            <div class="prix">
-                                <p class="prix-txt">35€</p>
+                            <div class="validation"> 
+                                <p class="prix-txt">35€</p>                                
+                                <div class="check">
+                                    <i class="fa-solid fa-check-circle"></i>                               
+                                </div>
                             </div>
-                            <div class="check">                        
-                                <i class="fa-solid fa-check-circle"></i>
-                            </div>
-                        </div>
-                    </li>
+                        </article>
+                    </li>             
                     <li class="menu">
-                        <div class="menuetprix">
+                        <article class="plats">
                             <div class="menu-txt">
-                                <h3 class="titre_menus">Poulet rôti aux herbes de Provence </h3>
-                                <p class="subtitle_menus">Et sa crème de truffe</p>
+                                <h3 class="titre_menus">Poulet rôti aux herbes de Provence</h3>
+                                <span class="accompagnement">Et sa crème de truffe</span>
                             </div>
-                            <div class="prix">
-                                <p class="prix-txt">40€</p>
+                            <div class="validation"> 
+                                <p class="prix-txt">40€</p>                                
+                                <div class="check">
+                                    <i class="fa-solid fa-check-circle"></i>                               
+                                </div>
                             </div>
-                            <div class="check">
-                                <i class="fa-solid fa-check-circle"></i>
-                            </div>
-                        </div>
-                    </li>
+                        </article>
+                    </li>             
                 </ul>                                                     
-                <ul class="plats">                    
+                <ul class="plates">                    
                     <h2 class="subtitle_lacarte">PLATS</h2>
                     <li class="menu">
-                        <div class="menuetprix">
-                            <div class="menu-txt"> 
-                                <h3 class="titre_menus">Poulet rôti aux herbes de Provence </h3>
-                                <p class="subtitle_menus">Et sa crème de truffe</p>
-                            </div>
-                            <div class="prix">
-                                <p class="prix-txt">40€</p>
-                            </div>
-                            <div class="check">
-                                <i class="fa-solid fa-check-circle"></i>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="menu">
-                        <div class="menuetprix">
+                        <article class="plats">
                             <div class="menu-txt">
-                                <h3 class="titre_menus">Langouste rôtie </h3>
-                                <p class="subtitle_menus">Et ses légumes de saison</p>
+                                <h3 class="titre_menus">Poulet rôti aux herbes de Provence</h3>
+                                <span class="accompagnement">Et sa crème de truffe</span>
                             </div>
-                            <div class="prix">
-                                <p class="prix-txt">35€</p>
-                            </div>                                                                           
-                            <div class="check">                       
-                                <i class="fa-solid fa-check-circle"></i>
+                            <div class="validation"> 
+                                <p class="prix-txt">40€</p>                                
+                                <div class="check">
+                                    <i class="fa-solid fa-check-circle"></i>                               
+                                </div>
                             </div>
-                        </div>                        
-                    </li>
+                        </article>
+                    </li>             
                     <li class="menu">
-                        <div class="menuetprix">
+                        <article class="plats">
                             <div class="menu-txt">
-                                <h3 class="titre_menus">Côte de bœuf Angus </h3>
-                                <p class="subtitle_menus">Et sa purée de panais</p>
+                                <h3 class="titre_menus">Langouste rôtie</h3>
+                                <span class="accompagnement">Et ses légumes de saison</span>
                             </div>
-                            <div class="prix">
-                                <p class="prix-txt">44€</p>
-                            </div>                                                                           
-                            <div class="check">                       
-                                <i class="fa-solid fa-check-circle"></i>
+                            <div class="validation"> 
+                                <p class="prix-txt">35€</p>                               
+                                <div class="check">
+                                    <i class="fa-solid fa-check-circle"></i>                               
+                                </div>
                             </div>
-                        </div>                        
-                    </li>
+                        </article>
+                    </li>             
+                    <li class="menu">
+                        <article class="plats">
+                            <div class="menu-txt">
+                                <h3 class="titre_menus">Côte de bœuf Angus</h3>
+                                <span class="accompagnement">Et sa purée de panais</span>
+                            </div>
+                            <div class="validation"> 
+                                <p class="prix-txt">44€</p>                                
+                                <div class="check">
+                                    <i class="fa-solid fa-check-circle"></i>                               
+                                </div>
+                            </div>
+                        </article>
+                    </li>             
                 </ul>
                 <ul class="desserts">                    
                     <h2 class="subtitle_lacarte">DESSERTS</h2>                    
                     <li class="menu">
-                        <div class="menuetprix">
+                        <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Farandole de desserts</h3>
-                                <p class="subtitle_menus">Du chef</p>
+                                <span class="accompagnement">Du chef</span>
                             </div>
-                            <div class="prix">
-                                <p class="prix-txt">18€</p>
-                            </div>                                                                            
-                            <div class="check">                        
-                                <i class="fa-solid fa-check-circle"></i>
+                            <div class="validation"> 
+                                <p class="prix-txt">18€</p>                                
+                                <div class="check">
+                                    <i class="fa-solid fa-check-circle"></i>                               
+                                </div>
                             </div>
-                        </div>                        
-                    </li>
+                        </article>
+                    </li>             
                     <li class="menu">
-                        <div class="menuetprix">
+                        <article class="plats">
                             <div class="menu-txt">
-                                <h3 class="titre_menus">Crème brulée </h3>
-                                <p class="subtitle_menus">Revisitée</p>
+                                <h3 class="titre_menus">Crème brulée</h3>
+                                <span class="accompagnement">Revisitée</span>
                             </div>
-                            <div class="prix">
-                                <p class="prix-txt">22€</p>
-                            </div>                                                                           
-                            <div class="check">                       
-                                <i class="fa-solid fa-check-circle"></i>
+                            <div class="validation"> 
+                                <p class="prix-txt">22€</p>                                
+                                <div class="check">
+                                    <i class="fa-solid fa-check-circle"></i>                               
+                                </div>
                             </div>
-                        </div>                        
-                    </li>
+                        </article>
+                    </li>             
                     <li class="menu">
-                        <div class="menuetprix">
+                        <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Tiramisu</h3>
-                                <p class="subtitle_menus">À la noisette</p>
+                                <span class="accompagnement">À la noisette</span>
                             </div>
-                            <div class="prix">
-                                <p class="prix-txt">23€</p>
-                            </div>                                                                           
-                            <div class="check">                        
-                                <i class="fa-solid fa-check-circle"></i>
+                            <div class="validation"> 
+                                <p class="prix-txt">23€</p>                                
+                                <div class="check">
+                                    <i class="fa-solid fa-check-circle"></i>                               
+                                </div>
                             </div>
-                        </div>                        
-                    </li>
+                        </article>
+                    </li>             
                     </a>
                 </ul>
-
                 <div class="commander">
                     <a href="#">                       
                     <button disabled="" class="searchbutton" value="rechercher">
