--- a/Restaurants/restaurant3.html
+++ b/Restaurants/restaurant3.html
@@ -32,151 +32,151 @@
                     <h2 class="subtitle_lacarte">ENTRÉES</h2> 
                     <a href="#">             
                     <li class="menu">
-                        <div class="menuetprix">
-                            <div class="menu-txt">                            
-                                <h3 class="titre_menus">Ravioles de foie gras </h3>
-                                <p class="subtitle_menus">Accompagnées de leur crème à la truffe</p>
-                            </div>
-                            <div class="prix"> 
-                                <p class="prix-txt">25€</p>                           
-                            </div>
-                            <div class="check">                                                       
-                                <i class="fa-solid fa-check-circle"></i>                                    
-                            </div>
-                        </div>
-                    </li>                          
-                    <li class="menu">
-                        <div class="menuetprix">
+                        <article class="plats">
                             <div class="menu-txt">
-                                <h3 class="titre_menus">Caviar osciètre </h3>
-                                <p class="subtitle_menus">Sur blini à la farine de blé noir</p>
+                                <h3 class="titre_menus">Ravioles de foie gras</h3>
+                                <span class="accompagnement">Accompagnées de leur crème à la truffe</span>
                             </div>
-                            <div class="prix">
-                                <p class="prix-txt">35€</p>
+                            <div class="validation"> 
+                                <p class="prix-txt">25€</p>                                
+                                <div class="check">
+                                    <i class="fa-solid fa-check-circle"></i>                               
+                                </div>
                             </div>
-                            <div class="check">                        
-                                <i class="fa-solid fa-check-circle"></i>
-                            </div>
-                        </div>
-                    </li>
+                        </article>
+                    </li>             
                     <li class="menu">
-                        <div class="menuetprix">
+                        <article class="plats">
+                            <div class="menu-txt">
+                                <h3 class="titre_menus">Caviar osciètre</h3>
+                                <span class="accompagnement">Sur blini à la farine de blé noir</span>
+                            </div>
+                            <div class="validation"> 
+                                <p class="prix-txt">35€</p>                                
+                                <div class="check">
+                                    <i class="fa-solid fa-check-circle"></i>                               
+                                </div>
+                            </div>
+                        </article>
+                    </li>             
+                    <li class="menu">
+                        <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Homard et espuma de potiron</h3>
-                                <p class="subtitle_menus">Marinés aux zestes d'orange</p>
+                                <span class="accompagnement">Marinés aux zestes d'orange</span>
                             </div>
-                            <div class="prix">
-                                <p class="prix-txt">20€</p>
+                            <div class="validation"> 
+                                <p class="prix-txt">20€</p>                                
+                                <div class="check">
+                                    <i class="fa-solid fa-check-circle"></i>                               
+                                </div>
                             </div>
-                            <div class="check">
-                                <i class="fa-solid fa-check-circle"></i>
-                            </div>
-                        </div>
+                        </article>
                     </li>
                     <li class="menu">
-                        <div class="menuetprix">
+                        <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Foie gras de canard cuit entier</h3>
-                                <p class="subtitle_menus">Confiture de figue et pain toasté</p>
+                                <span class="accompagnement">Confiture de figue et pain toasté</span>
                             </div>
-                            <div class="prix">
-                                <p class="prix-txt">35€</p>
-                            </div>                                                                           
-                            <div class="check">                       
-                                <i class="fa-solid fa-check-circle"></i>
+                            <div class="validation"> 
+                                <p class="prix-txt">35€</p>                                
+                                <div class="check">
+                                    <i class="fa-solid fa-check-circle"></i>                               
+                                </div>
                             </div>
-                        </div>                        
-                    </li>
+                        </article>
+                    </li>                         
                 </ul>                                                     
-                <ul class="plats">                    
+                <ul class="plates">                    
                     <h2 class="subtitle_lacarte">PLATS</h2>
                     <li class="menu">
-                        <div class="menuetprix">
-                            <div class="menu-txt"> 
+                        <article class="plats">
+                            <div class="menu-txt">
                                 <h3 class="titre_menus">Noix de coquilles Saint-Jacques</h3>
-                                <p class="subtitle_menus">Sur lit de purée de céleri-rave</p>
+                                <span class="accompagnement">Sur lit de purée de céleri-rave</span>
                             </div>
-                            <div class="prix">
-                                <p class="prix-txt">40€</p>
+                            <div class="validation"> 
+                                <p class="prix-txt">40€</p>                                
+                                <div class="check">
+                                    <i class="fa-solid fa-check-circle"></i>                               
+                                </div>
                             </div>
-                            <div class="check">
-                                <i class="fa-solid fa-check-circle"></i>
-                            </div>
-                        </div>
-                    </li>
+                        </article>
+                    </li>             
                     <li class="menu">
-                        <div class="menuetprix">
+                        <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Langoustine poêlée</h3>
-                                <p class="subtitle_menus">Purée de patate douce</p>
+                                <span class="accompagnement">Purée de patate douce</span>
                             </div>
-                            <div class="prix">
-                                <p class="prix-txt">35€</p>
-                            </div>                                                                           
-                            <div class="check">                       
-                                <i class="fa-solid fa-check-circle"></i>
+                            <div class="validation"> 
+                                <p class="prix-txt">35€</p>                               
+                                <div class="check">
+                                    <i class="fa-solid fa-check-circle"></i>                               
+                                </div>
                             </div>
-                        </div>                        
-                    </li>
+                        </article>
+                    </li>             
                     <li class="menu">
-                        <div class="menuetprix">
+                        <article class="plats">
                             <div class="menu-txt">
-                                <h3 class="titre_menus">Mijoté de queue de bœuf </h3>
-                                <p class="subtitle_menus">Et riz sauvage aux zestes de citron</p>
+                                <h3 class="titre_menus">Mijoté de queue de bœuf</h3>
+                                <span class="accompagnement">Et riz sauvage aux zestes de citron</span>
                             </div>
-                            <div class="prix">
-                                <p class="prix-txt">45€</p>
-                            </div>                                                                           
-                            <div class="check">                       
-                                <i class="fa-solid fa-check-circle"></i>
+                            <div class="validation"> 
+                                <p class="prix-txt">45€</p>                                
+                                <div class="check">
+                                    <i class="fa-solid fa-check-circle"></i>                               
+                                </div>
                             </div>
-                        </div>                        
-                    </li>
+                        </article>
+                    </li>             
                 </ul>
                 <ul class="desserts">                    
                     <h2 class="subtitle_lacarte">DESSERTS</h2>                    
                     <li class="menu">
-                        <div class="menuetprix">
+                        <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Macaron noisette et chocolat</h3>
-                                <p class="subtitle_menus">Glace au caramel brun et sel de Guérande</p>
+                                <span class="accompagnement">Glace au caramel brun et sel de Guérande</span>
                             </div>
-                            <div class="prix">
-                                <p class="prix-txt">18€</p>
-                            </div>                                                                            
-                            <div class="check">                        
-                                <i class="fa-solid fa-check-circle"></i>
+                            <div class="validation"> 
+                                <p class="prix-txt">18€</p>                                
+                                <div class="check">
+                                    <i class="fa-solid fa-check-circle"></i>                               
+                                </div>
                             </div>
-                        </div>                        
-                    </li>
+                        </article>
+                    </li>             
                     <li class="menu">
-                        <div class="menuetprix">
+                        <article class="plats">
                             <div class="menu-txt">
-                                <h3 class="titre_menus">Baba au rhum revisité </h3>
-                                <p class="subtitle_menus">Avec son coulis de citron</p>
+                                <h3 class="titre_menus">Baba au rhum revisité</h3>
+                                <span class="accompagnement">Avec son coulis de citron</span>
                             </div>
-                            <div class="prix">
-                                <p class="prix-txt">22€</p>
-                            </div>                                                                           
-                            <div class="check">                       
-                                <i class="fa-solid fa-check-circle"></i>
+                            <div class="validation"> 
+                                <p class="prix-txt">22€</p>                                
+                                <div class="check">
+                                    <i class="fa-solid fa-check-circle"></i>                               
+                                </div>
                             </div>
-                        </div>                        
-                    </li>
+                        </article>
+                    </li>             
                     <li class="menu">
-                        <div class="menuetprix">
+                        <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Tarte au citron meringuée</h3>
-                                <p class="subtitle_menus">Déstructurée</p>
+                                <span class="accompagnement">Déstructurée</span>
                             </div>
-                            <div class="prix">
-                                <p class="prix-txt">23€</p>
-                            </div>                                                                           
-                            <div class="check">                        
-                                <i class="fa-solid fa-check-circle"></i>
+                            <div class="validation"> 
+                                <p class="prix-txt">23€</p>                                
+                                <div class="check">
+                                    <i class="fa-solid fa-check-circle"></i>                               
+                                </div>
                             </div>
-                        </div>                        
-                    </li>
+                        </article>
+                    </li>             
                     </a>
                 </ul>
 
