--- a/Restaurants/restaurant4.html
+++ b/Restaurants/restaurant4.html
@@ -35,140 +35,139 @@
                     <h2 class="subtitle_lacarte">ENTRÉES</h2> 
                     <a href="#">             
                     <li class="menu">
-                        <div class="menuetprix">
-                            <div class="menu-txt">                            
+                        <article class="plats">
+                            <div class="menu-txt">
                                 <h3 class="titre_menus">Tartare de poulpe acidulé</h3>
-                                <p class="subtitle_menus">Aux zestes d'orange</p>
+                                <span class="accompagnement">Aux zestes d'orange</span>
                             </div>
-                            <div class="prix"> 
-                                <p class="prix-txt">25€</p>                           
+                            <div class="validation"> 
+                                <p class="prix-txt">25€</p>                                
+                                <div class="check">
+                                    <i class="fa-solid fa-check-circle"></i>                               
+                                </div>
                             </div>
-                            <div class="check">                                                       
-                                <i class="fa-solid fa-check-circle"></i>                                    
-                            </div>
-                        </div>
-                    </li>                          
+                        </article>
+                    </li>             
                     <li class="menu">
-                        <div class="menuetprix">
+                        <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Velouté de légumes d'antan</h3>
-                                <p class="subtitle_menus">Carotte, panais, topinambour</p>
+                                <span class="accompagnement">Carotte, panais, topinambour</span>
                             </div>
-                            <div class="prix">
-                                <p class="prix-txt">35€</p>
+                            <div class="validation"> 
+                                <p class="prix-txt">35€</p>                                
+                                <div class="check">
+                                    <i class="fa-solid fa-check-circle"></i>                               
+                                </div>
                             </div>
-                            <div class="check">                        
-                                <i class="fa-solid fa-check-circle"></i>
-                            </div>
-                        </div>
-                    </li>
+                        </article>
+                    </li>             
                     <li class="menu">
-                        <div class="menuetprix">
+                        <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Soupe à l'oignon</h3>
-                                <p class="subtitle_menus">Revisitée</p>
+                                <span class="accompagnement">Revisitée</span>
                             </div>
-                            <div class="prix">
-                                <p class="prix-txt">20€</p>
+                            <div class="validation"> 
+                                <p class="prix-txt">20€</p>                                
+                                <div class="check">
+                                    <i class="fa-solid fa-check-circle"></i>                               
+                                </div>
                             </div>
-                            <div class="check">
-                                <i class="fa-solid fa-check-circle"></i>
-                            </div>
-                        </div>
-                    </li>
+                        </article>
+                    </li>             
                 </ul>                                                     
-                <ul class="plats">                    
+                <ul class="plates">                    
                     <h2 class="subtitle_lacarte">PLATS</h2>
                     <li class="menu">
-                        <div class="menuetprix">
-                            <div class="menu-txt"> 
+                        <article class="plats">
+                            <div class="menu-txt">
                                 <h3 class="titre_menus">Coquilles Saint-Jacques</h3>
-                                <p class="subtitle_menus">Accompagnées d'une purée de panais</p>
+                                <span class="accompagnement">Accompagnées d'une purée de panais</span>
                             </div>
-                            <div class="prix">
-                                <p class="prix-txt">40€</p>
+                            <div class="validation"> 
+                                <p class="prix-txt">40€</p>                                
+                                <div class="check">
+                                    <i class="fa-solid fa-check-circle"></i>                               
+                                </div>
                             </div>
-                            <div class="check">
-                                <i class="fa-solid fa-check-circle"></i>
-                            </div>
-                        </div>
-                    </li>
+                        </article>
+                    </li>             
                     <li class="menu">
-                        <div class="menuetprix">
+                        <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Magret de canard</h3>
-                                <p class="subtitle_menus">Et parmentier de pommes de terre</p>
+                                <span class="accompagnement">Et parmentier de pommes de terre</span>
                             </div>
-                            <div class="prix">
-                                <p class="prix-txt">35€</p>
-                            </div>                                                                           
-                            <div class="check">                       
-                                <i class="fa-solid fa-check-circle"></i>
+                            <div class="validation"> 
+                                <p class="prix-txt">35€</p>                               
+                                <div class="check">
+                                    <i class="fa-solid fa-check-circle"></i>                               
+                                </div>
                             </div>
-                        </div>                        
-                    </li>
+                        </article>
+                    </li>             
                     <li class="menu">
-                        <div class="menuetprix">
+                        <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Pigeonneau d’Ille-et-Vilaine</h3>
-                                <p class="subtitle_menus">Sur son lit de gnocchis aux légumes</p>
+                                <span class="accompagnement">Sur son lit de gnocchis aux légumes</span>
                             </div>
-                            <div class="prix">
-                                <p class="prix-txt">44€</p>
-                            </div>                                                                           
-                            <div class="check">                       
-                                <i class="fa-solid fa-check-circle"></i>
+                            <div class="validation"> 
+                                <p class="prix-txt">44€</p>                                
+                                <div class="check">
+                                    <i class="fa-solid fa-check-circle"></i>                               
+                                </div>
                             </div>
-                        </div>                        
-                    </li>
+                        </article>
+                    </li>             
                 </ul>
                 <ul class="desserts">                    
                     <h2 class="subtitle_lacarte">DESSERTS</h2>                    
                     <li class="menu">
-                        <div class="menuetprix">
+                        <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Pétales de violettes glacés</h3>
-                                <p class="subtitle_menus">Et purée de noisettes</p>
+                                <span class="accompagnement">Et purée de noisettes</span>
                             </div>
-                            <div class="prix">
-                                <p class="prix-txt">18€</p>
-                            </div>                                                                            
-                            <div class="check">                        
-                                <i class="fa-solid fa-check-circle"></i>
+                            <div class="validation"> 
+                                <p class="prix-txt">18€</p>                                
+                                <div class="check">
+                                    <i class="fa-solid fa-check-circle"></i>                               
+                                </div>
                             </div>
-                        </div>                        
-                    </li>
+                        </article>
+                    </li>             
                     <li class="menu">
-                        <div class="menuetprix">
+                        <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Fondant au chocolat</h3>
-                                <p class="subtitle_menus">Revisité</p>
+                                <span class="accompagnement">Revisité</span>
                             </div>
-                            <div class="prix">
-                                <p class="prix-txt">22€</p>
-                            </div>                                                                           
-                            <div class="check">                       
-                                <i class="fa-solid fa-check-circle"></i>
+                            <div class="validation"> 
+                                <p class="prix-txt">22€</p>                                
+                                <div class="check">
+                                    <i class="fa-solid fa-check-circle"></i>                               
+                                </div>
                             </div>
-                        </div>                        
-                    </li>
+                        </article>
+                    </li>             
                     <li class="menu">
-                        <div class="menuetprix">
+                        <article class="plats">
                             <div class="menu-txt">
                                 <h3 class="titre_menus">Millefeuille croustillant</h3>
-                                <p class="subtitle_menus">Myrtilles et pâte d’amande</p>
+                                <span class="accompagnement">Myrtilles et pâte d’amande</span>
                             </div>
-                            <div class="prix">
-                                <p class="prix-txt">23€</p>
-                            </div>                                                                           
-                            <div class="check">                        
-                                <i class="fa-solid fa-check-circle"></i>
+                            <div class="validation"> 
+                                <p class="prix-txt">23€</p>                                
+                                <div class="check">
+                                    <i class="fa-solid fa-check-circle"></i>                               
+                                </div>
                             </div>
-                        </div>                        
-                    </li>
+                        </article>
+                    </li>             
                     </a>
                 </ul>
-
                 <div class="commander">
                     <a href="#">                       
                     <button disabled="" class="searchbutton" value="rechercher">
