--- a/Restaurants/restaurant1.html
+++ b/Restaurants/restaurant1.html
@@ -138,8 +138,8 @@
                     <li class="menu">
                         <article class="plats">
                             <div class="menu-txt">
-                                <h3 class="titre_menus">Macaron au chocolat d'exception  </h3>
-                                <span class="accompagnement">Et glace à la vanille de Madagascar</span>
+                                <h3 class="titre_menus_madagascar">Macaron au chocolat d'exception  </h3>
+                                <span class="accompagnement-madagascar">Et glace à la vanille de Madagascar</span>
                             </div>
                             <div class="validation"> 
                                 <p class="prix-txt">22€</p>                                
